--- a/README
+++ b/README
@@ -10,6 +10,8 @@ Grupa: 324 CA
 	-ast.asm contine codul sursa al programului
 	
 	-acest fisier README.
+	
+	Enunt: https://ocw.cs.pub.ro/courses/iocla/teme/tema-3
 
 	Prezentarea solutiei:
 
